force-app/main/default/objects/System_Log__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Source Apex class</description>
    <inlineHelpText>Source Apex class</inlineHelpText>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>