force-app/main/default/objects/System_Log__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>Endpoint URL</description>
    <inlineHelpText>Endpoint URL</inlineHelpText>
    <label>Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>