force-app/main/default/objects/System_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Source Apex method</description>
    <inlineHelpText>Source Apex method</inlineHelpText>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>