force-app/main/default/objects/System_Log__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Error identifier</description>
    <inlineHelpText>Error identifier</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>