force-app/main/default/objects/System_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Id of record related to message</description>
    <inlineHelpText>Id of record related to message</inlineHelpText>
    <label>Related Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>