force-app/main/default/objects/System_Log__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <description>HTTP Request Body</description>
    <inlineHelpText>HTTP Request Body</inlineHelpText>
    <label>Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>