force-app/main/default/objects/System_Log__c/fields/Request_Headers__c.field-meta.xml
<CustomField>
    <fullName>Request_Headers__c</fullName>
    <description>HTTP call header key values</description>
    <inlineHelpText>HTTP call header key values</inlineHelpText>
    <label>Request Headers</label>
    <type>TextArea</type>
</CustomField>