force-app/main/default/objects/System_Log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>HTTP Response Body JSON</description>
    <inlineHelpText>HTTP Response Body JSON</inlineHelpText>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>