force-app/main/default/objects/System_Log__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <description>HTTP Call Response Status Code</description>
    <inlineHelpText>HTTP Call Response Status Code</inlineHelpText>
    <label>Response Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>