force-app/main/default/objects/System_Log__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <description>HTTP API Service call name</description>
    <inlineHelpText>HTTP API Service call name</inlineHelpText>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>