force-app/main/default/objects/System_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>