force-app/main/default/objects/System_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Apex stack trace</description>
    <inlineHelpText>Apex stack trace</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>