force-app/main/default/objects/System_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Level__c</columns>
    <columns>Service_Name__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Request_Body__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>